<?xml version="1.0"?>
<package>
  <name>fyp</name>
  <version>0.0.1</version>
  <description>The fyp package</description>

  <maintainer email="karnikram@gmail.com">Karnik Ram</maintainer>


  <license>TODO</license>


  <build_depend>roscpp</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>cmake_modules</run_depend>

  <buildtool_depend>catkin</buildtool_depend>



  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
